add tokenezation and stop words

--- a/analyse.ipynb
+++ b/analyse.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
+   "id": "5f66fdbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from wordcloud import WordCloud\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a1685639",
    "metadata": {},
    "outputs": [
@@ -20,12 +33,8 @@
     }
    ],
    "source": [
-    "import pandas as pd \n",
-    "\n",
-    "\n",
     "df = pd.read_csv(\"data/emails.csv\",index_col=False)\n",
     "df = df.drop(columns=[\"Unnamed: 0\"])\n",
-    "\n",
     "\n",
     "df.columns"
    ]
@@ -1304,13 +1313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "18e52ecb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop message id and date they not important\n",
     "col_to_drop = [\"message_id\",\"date\"]\n",
+    "\n",
+    "col_to_drop = [col for col in col_to_drop if col in df.columns]\n",
     "\n",
     "df = df.drop(columns=col_to_drop)\n"
    ]
@@ -1474,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "1c423358",
    "metadata": {},
    "outputs": [
@@ -1506,6 +1517,10 @@
     "df[\"all_text\"] = df[\"subject\"].astype(str) + \" \" + df[\"message\"].astype(str) + \" \" + df[\"text\"].astype(str)\n",
     "\n",
     "\n",
+    "spam_mask = df[\"label_text\"] == \"spam\"\n",
+    "spam_text = \" \".join((df[spam_mask][\"subject\"].astype(str) + \" \" + \n",
+    "                      df[spam_mask][\"message\"].astype(str) + \" \" + \n",
+    "                      df[spam_mask][\"text\"].astype(str)).tolist())\n",
     "\n",
     "spam_text = \" \".join(df[df[\"label_text\"] == \"spam\" ][\"all_text\"].tolist()) \n",
     "ham_text = \" \".join(df[df[\"label_text\"] == \"ham\" ][\"all_text\"].tolist()) \n",
@@ -1529,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 98,
    "id": "041ca497",
    "metadata": {},
    "outputs": [],
@@ -1537,6 +1552,10 @@
     "\n",
     "\n",
     "import os \n",
+    "\n",
+    "# drop all_text\n",
+    "\n",
+    "df = df.drop(columns=\"all_text\")\n",
     "\n",
     "os.makedirs(\"./data/processed\", exist_ok=True)\n",
     "\n",
@@ -1546,7 +1565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
