organzed eda and pretraitement

--- a/notebook/2-pretraitement.ipynb
+++ b/notebook/2-pretraitement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "53cd4afd",
    "metadata": {
     "ExecuteTime": {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "fb0ffa05",
    "metadata": {
     "ExecuteTime": {
@@ -65,7 +65,7 @@
          "type": "string"
         }
        ],
-       "ref": "2e959f88-ecc5-47c6-bd8c-2448df2e320f",
+       "ref": "5990a41c-83ca-44fe-8933-fc3ac831d7ef",
        "rows": [
         [
          "0",
@@ -486,7 +486,7 @@
        "[31716 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,30 +503,17 @@
    "metadata": {},
    "source": [
     "---\n",
-    "Lowercase : (text_label dont need lower methode)\n",
-    "\n",
-    "Remove punctuation & special characters\n",
-    "\n",
-    "Remove punctuation & special characters\n",
-    "\n",
+    "### clean_text function handle all pretraitement\n",
+    "- Lowercase : (text_label dont need lower methode)\n",
+    "- Remove punctuation & special characters\n",
     "- tokenize\n",
-    "\n",
     "- remove stop words\n",
-    "\n",
-    "- stemming\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0a0b67a",
-   "metadata": {},
-   "source": [
-    "---\n"
+    "- stemming"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "15967731",
    "metadata": {
     "ExecuteTime": {
@@ -560,7 +547,7 @@
          "type": "string"
         }
        ],
-       "ref": "672ebeff-797d-46fc-98b1-721de48b5368",
+       "ref": "ddb32c1b-5584-4d08-9979-d8c630f743f9",
        "rows": [
         [
          "0",
@@ -981,25 +968,13 @@
        "[31716 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import string\n",
-    "# import re\n",
-    "# from nltk.tokenize import word_tokenize\n",
-    "# from nltk.corpus import stopwords \n",
-    "# from nltk.stem import SnowballStemmer\n",
-    "\n",
-    "from clean import clean_text # function i use in preprocesing and training\n",
-    "\n",
-    "# Initialize tools\n",
-    "# stop_words_english = set(stopwords.words(\"english\"))\n",
-    "# stemmer = SnowballStemmer(\"english\")\n",
-    "\n",
-    "\n",
+    "from clean import clean_text \n",
     "\n",
     "df[\"text\"] = df[\"text\"].astype(str)\n",
     "df[\"text\"] = df[\"text\"].apply(clean_text)\n",
@@ -1009,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "51a39205",
    "metadata": {
     "ExecuteTime": {
@@ -1024,7 +999,7 @@
        "Index(['text', 'label', 'label_text'], dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "49b47189",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1039,7 @@
          "type": "string"
         }
        ],
-       "ref": "124582e4-6cb0-4141-aebd-0cfb63f667d9",
+       "ref": "a1b52b20-6c1c-455c-a3f0-85558e933d4d",
        "rows": [
         [
          "0",
@@ -1485,7 +1460,7 @@
        "[31716 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "5d2f34ff",
    "metadata": {},
    "outputs": [],
@@ -1505,12 +1480,7 @@
     "\n",
     "\n",
     "# Save to CSV\n",
-    "training_df.to_csv('../data/processed/training_data.csv', index=False)\n",
-    "\n",
-    "# print(f\"Training data saved: {len(training_df)} rows\")\n",
-    "# print(f\"Columns: {training_df.columns.tolist()}\")\n",
-    "# print(f\"\\nLabel distribution:\")\n",
-    "# print(training_df['label'].value_counts())"
+    "training_df.to_csv('../data/processed/training_data.csv', index=False)\n"
    ]
   }
  ],
